# Sherlock

./: README.md
backend/: agents.py  app.py  eval_retrieval.py  prompt_manager.py  pyproject.toml  retrieval.py
backend/artifacts/: eval.csv
backend/prompts/: prompts.yaml
backend/retrieval/: doc_db.json
ui/: package-lock.json  package.json
ui/src/: App.js  index.css
